--- a/MagmaConverse.Messaging.Kafka/MagmaConverse.Messaging.Kafka.csproj
+++ b/MagmaConverse.Messaging.Kafka/MagmaConverse.Messaging.Kafka.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <OutputPath>..\bin\Debug\netcoreapp3.0</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <OutputPath>..\bin\Release\netcoreapp3.0</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Confluent.Kafka" Version="1.0.1.1" />
