--- a/MagmaConverse.Utilities/MagmaConverse.Utilities.csproj
+++ b/MagmaConverse.Utilities/MagmaConverse.Utilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -11,7 +11,6 @@
     <OutputPath>..\bin\Release\netcoreapp3.0</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview5-19227-01" />
+    <ProjectReference Include="..\MagmaConverse.Framework\MagmaConverse.Framework.csproj" />
   </ItemGroup>
-
 </Project>
