--- a/MagmaConverse.Persistence.MongoDB/MagmaConverse.Persistence.MongoDB.csproj
+++ b/MagmaConverse.Persistence.MongoDB/MagmaConverse.Persistence.MongoDB.csproj
@@ -11,19 +11,12 @@
     <OutputPath>..\bin\Release\netcoreapp3.0</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="Class1.cs" />
+    <ProjectReference Include="..\MagmaConverse.Interfaces\MagmaConverse.Interfaces.csproj" />
+    <ProjectReference Include="..\MagmaConverse.Persistence\MagmaConverse.Persistence.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Serialization\" />
-    <Folder Include="Core\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="MongoDB.Driver" Version="2.8.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MagmaConverse.Configuration\MagmaConverse.Configuration.csproj" />
-    <ProjectReference Include="..\SwaggerWcf\SwaggerWcf.csproj" />
   </ItemGroup>
 </Project>
