--- a/MagmaConverse.Messaging.Kafka/MagmaConverse.Messaging.Kafka.csproj
+++ b/MagmaConverse.Messaging.Kafka/MagmaConverse.Messaging.Kafka.csproj
@@ -5,10 +5,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\bin\Debug\netcoreapp3.0</OutputPath>
+    <OutputPath>..\bin\Debug</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\bin\Release\netcoreapp3.0</OutputPath>
+    <OutputPath>..\bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
