--- a/MagmaConverse.Services/MagmaConverse.Services.csproj
+++ b/MagmaConverse.Services/MagmaConverse.Services.csproj
@@ -5,15 +5,18 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\bin\Debug\netcoreapp3.0</OutputPath>
+    <OutputPath>..\bin\Debug</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\bin\Release\netcoreapp3.0</OutputPath>
+    <OutputPath>..\bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\MagmaConverse.Interfaces\MagmaConverse.Interfaces.csproj" />
     <ProjectReference Include="..\MagmaConverse.Models\MagmaConverse.Models.csproj" />
     <ProjectReference Include="..\MagmaConverse.Messaging\MagmaConverse.Messaging.csproj" />
+    <ProjectReference Include="..\SwaggerWcf\SwaggerWcf.csproj" />
+    <ProjectReference Include="..\MagmaConverse.Shims\MagmaConverse.Shims.csproj" />
+    <ProjectReference Include="..\MagmaConverse.Controllers\MagmaConverse.Controllers.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
