--- a/SwaggerWcf/SwaggerWcf.csproj
+++ b/SwaggerWcf/SwaggerWcf.csproj
@@ -5,9 +5,21 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\bin\Debug\netcoreapp3.0</OutputPath>
+    <OutputPath>..\bin\Debug</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\bin\Release\netcoreapp3.0</OutputPath>
+    <OutputPath>..\bin\Release</OutputPath>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MagmaConverse.Shims\MagmaConverse.Shims.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="SwaggerWcfEndpoint.cs" />
+    <Compile Remove="ISwaggerWcfEndpoint.cs" />
+  </ItemGroup>
 </Project>
