--- a/MagmaConverse/Properties/launchSettings.json
+++ b/MagmaConverse/Properties/launchSettings.json
@@ -19,12 +19,11 @@
     },
     "MagmaConverse": {
       "commandName": "Project",
-      "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:8089;https://localhost:5001"
     }
   }
 }
