--- a/MagmaConverse.Services/MagmaConverse.Services.csproj
+++ b/MagmaConverse.Services/MagmaConverse.Services.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="FormManagerRestService.cs" />
+  </ItemGroup>
 </Project>
