Refactored the Database Drivers so that the .NET driver assembly is loaded and Activator.CreateInstance() is called

--- a/MagmaConverse.Persistence/MagmaConverse.Persistence.csproj
+++ b/MagmaConverse.Persistence/MagmaConverse.Persistence.csproj
@@ -16,4 +16,7 @@
   <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MagmaConverse.Utilities\MagmaConverse.Utilities.csproj" />
+  </ItemGroup>
 </Project>
