--- a/MagmaConverse/App.config
+++ b/MagmaConverse/App.config
@@ -14,7 +14,7 @@
 
   <MagmaConverse noPersistence="true" purgeDatabaseOnStartup="true" useMocksForRestCalls="false" maxRepeaterIterations="3" noMessaging="true">
     <servers>
-      <server name="OnboardingServer" url="localhost:3000" />
+      <server name="MagmaConverseServer" url="localhost:3000" />
     </servers>
   </MagmaConverse>
 
@@ -51,9 +51,9 @@
   <connectionStrings>
     <add name="mongodb" providerName="mongodb" connectionString="mongodb://localhost"/>
   </connectionStrings>
-
-  <MongoDBAdapter>
-    <behavior collectionName="DefaultCollection" databaseName="DefaultDatabase" useDatabase="true"/>
+  
+  <MongoDBAdapter driver="MagmaConverse.Persistence.MongoDB.MongoDBPersistenceDriver, MagmaConverse.Persistence.MongoDB">
+    <behavior collectionName="DefaultCollection" databaseName="MagmaConverse" useDatabase="true"/>
     <typeBehaviors>
       <typeBehavior
         type="MagmaConverse.Data.SBSForm, MagmaConverse.Data"
