--- a/MagmaConverse.ConsoleApp/App.config
+++ b/MagmaConverse.ConsoleApp/App.config
@@ -12,9 +12,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
 
-  <MagmaConverse noPersistence="true" purgeDatabaseOnStartup="true" useMocksForRestCalls="false" maxRepeaterIterations="3" noMessaging="true">
+  <MagmaConverse noPersistence="false" purgeDatabaseOnStartup="true" useMocksForRestCalls="false" maxRepeaterIterations="3" noMessaging="true">
     <servers>
-      <server name="OnboardingServer" url="localhost:3000" />
+      <server name="MagmaConverseServer" url="localhost:3000" />
     </servers>
   </MagmaConverse>
 
@@ -52,8 +52,8 @@
     <add name="mongodb" providerName="mongodb" connectionString="mongodb://localhost"/>
   </connectionStrings>
 
-  <MongoDBAdapter>
-    <behavior collectionName="DefaultCollection" databaseName="DefaultDatabase" useDatabase="true"/>
+  <MongoDBAdapter driver="MagmaConverse.Persistence.MongoDB.MongoDBPersistenceDriver, MagmaConverse.Persistence.MongoDB">
+    <behavior collectionName="DefaultCollection" databaseName="MagmaConverse" useDatabase="true"/>
     <typeBehaviors>
       <typeBehavior
         type="MagmaConverse.Data.SBSForm, MagmaConverse.Data"
