Changed namespaces for MagmaConverse.Framework to Magmasystems.Framework

--- a/MagmaConverse.ConsoleApp/App.config
+++ b/MagmaConverse.ConsoleApp/App.config
@@ -52,7 +52,7 @@
     <add name="mongodb" providerName="mongodb" connectionString="mongodb://localhost"/>
   </connectionStrings>
 
-  <MongoDBAdapter driver="MagmaConverse.Persistence.MongoDB.MongoDBPersistenceDriver, MagmaConverse.Persistence.MongoDB">
+  <MongoDBAdapter driver="MagmaConverse.Persistence.MongoDB.MongoDBPersistenceDriver, MagmaConverse.Persistence.MongoDB" databaseName="MagmaConverse">
     <behavior collectionName="DefaultCollection" databaseName="MagmaConverse" useDatabase="true"/>
     <typeBehaviors>
       <typeBehavior
