--- a/MagmaConverse.Controllers/MagmaConverse.Controllers.csproj
+++ b/MagmaConverse.Controllers/MagmaConverse.Controllers.csproj
@@ -14,6 +14,8 @@
     <ProjectReference Include="..\MagmaConverse.Models\MagmaConverse.Models.csproj" />
     <ProjectReference Include="..\MagmaConverse.Data\MagmaConverse.Data.csproj" />
     <ProjectReference Include="..\MagmaConverse.Views\MagmaConverse.Views.csproj" />
+    <ProjectReference Include="..\Magmasystems.Persistence\Magmasystems.Persistence.csproj" />
+    <ProjectReference Include="..\Magmasystems.Framework\Magmasystems.Framework.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Remove=".DS_Store" />
