More namespace refactoring and DB fixes

--- a/MagmaConverse.ConsoleApp/App.config
+++ b/MagmaConverse.ConsoleApp/App.config
@@ -4,7 +4,7 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="swaggerwcf" type="SwaggerWcf.Configuration.SwaggerWcfSection, SwaggerWcf" />
-    <section name="MongoDBAdapter" type="MagmaConverse.Persistence.DocumentDatabaseAdapterConfiguration, MagmaConverse.Persistence"/>
+    <section name="MongoDBAdapter" type="Magmasystems.Persistence.DocumentDatabaseAdapterConfiguration, Magmasystems.Persistence"/>
     <section name="MagmaConverse" type="MagmaConverse.Configuration.MagmaConverseConfiguration, MagmaConverse.Configuration"/>
   </configSections>
 
@@ -38,7 +38,7 @@
     <!--
       Log all Mongo messages in yellow. If you don't set additivity to false, then the same message will be written to the console (ie: captured by the root section below)
     -->
-    <logger name="MagmaConverse.Persistence.MongoDB.MongoDBPersistenceDriver" additivity="false">
+    <logger name="Magmasystems.Persistence.MongoDB.MongoDBPersistenceDriver" additivity="false">
       <appender-ref ref="colorconsole" />    
     </logger>
 
@@ -52,7 +52,7 @@
     <add name="mongodb" providerName="mongodb" connectionString="mongodb://localhost"/>
   </connectionStrings>
 
-  <MongoDBAdapter driver="MagmaConverse.Persistence.MongoDB.MongoDBPersistenceDriver, MagmaConverse.Persistence.MongoDB" databaseName="MagmaConverse">
+  <MongoDBAdapter driver="Magmasystems.Persistence.MongoDB.MongoDBPersistenceDriver, Magmasystems.Persistence.MongoDB" databaseName="MagmaConverse">
     <behavior collectionName="DefaultCollection" databaseName="MagmaConverse" useDatabase="true"/>
     <typeBehaviors>
       <typeBehavior
