--- a/MagmaConverse.Services/MagmaConverse.Services.csproj
+++ b/MagmaConverse.Services/MagmaConverse.Services.csproj
@@ -13,13 +13,13 @@
   <ItemGroup>
     <ProjectReference Include="..\MagmaConverse.Interfaces\MagmaConverse.Interfaces.csproj" />
     <ProjectReference Include="..\MagmaConverse.Models\MagmaConverse.Models.csproj" />
-    <ProjectReference Include="..\MagmaConverse.Messaging\MagmaConverse.Messaging.csproj" />
+    <ProjectReference Include="..\Magmasystems.Messaging\Magmasystems.Messaging.csproj" />
     <ProjectReference Include="..\SwaggerWcf\SwaggerWcf.csproj" />
     <ProjectReference Include="..\MagmaConverse.Shims\MagmaConverse.Shims.csproj" />
     <ProjectReference Include="..\MagmaConverse.Controllers\MagmaConverse.Controllers.csproj" />
     <ProjectReference Include="..\MagmaConverse.Wrkflow\MagmaConverse.Workflow.csproj" />
     <ProjectReference Include="..\MagmaConverse.Mocks\MagmaConverse.Mocks.csproj" />
-    <ProjectReference Include="..\MagmaConverse.Messaging.Kafka\MagmaConverse.Messaging.Kafka.csproj" />
+    <ProjectReference Include="..\Magmasystems.Messaging.Kafka\Magmasystems.Messaging.Kafka.csproj" />
     <ProjectReference Include="..\MagmaConverse.Data\MagmaConverse.Data.csproj" />
     <ProjectReference Include="..\MagmaConverse.Configuration\MagmaConverse.Configuration.csproj" />
     <ProjectReference Include="..\Magmasystems.Persistence\Magmasystems.Persistence.csproj" />
