--- a/MagmaConverse/App.config
+++ b/MagmaConverse/App.config
@@ -77,7 +77,7 @@
 
   <appSettings>
     <add key="Json.Trace" value="false"/>
-    <add key="Json.TypeNameHandling" value="Objects"/>
+    <add key="Json.TypeNameHandling" value="Auto"/>
   </appSettings>
 
   <swaggerwcf>
