--- a/MagmaConverse/MagmaConverse.csproj
+++ b/MagmaConverse/MagmaConverse.csproj
@@ -36,4 +36,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Controllers\JsonResult.cs" />
+  </ItemGroup>
 </Project>
