--- a/MagmaConverse.Tests/App.config
+++ b/MagmaConverse.Tests/App.config
@@ -12,7 +12,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
 
-  <MagmaConverse noPersistence="false" purgeDatabaseOnStartup="true" useMocksForRestCalls="false" maxRepeaterIterations="3" noMessaging="true">
+  <MagmaConverse noPersistence="true" purgeDatabaseOnStartup="true" useMocksForRestCalls="false" maxRepeaterIterations="3" noMessaging="true">
     <servers>
       <server name="MagmaConverseServer" url="localhost:3000" />
     </servers>
