Got the registerUser workflow to work. The FormServicesController now uses dependency injection to accept the singleton FormServiceController

--- a/MagmaConverse/App.config
+++ b/MagmaConverse/App.config
@@ -16,6 +16,17 @@
     <servers>
       <server name="MagmaConverseServer" url="localhost:3000" />
     </servers>
+    <workflows>
+      <workflow name="registerUser" type="MagmaConverse.Workflow.RegisterUserWorkflow, MagmaConverse.Workflow">
+        <properties>
+          <property name="smtpHost" value="smtp.gmail.com" />
+          <property name="smtpPort" value="587" />
+          <property name="smtpFrom" value="[put in the email address who you are sending from]" />
+          <property name="smtpCredentials" value="[comma-separated username and password]" />   
+          <property name="smtpUseSSL" value="true" />      
+        </properties>
+      </workflow>
+    </workflows>
   </MagmaConverse>
 
   <log4net>
